[package]
name = "vk"
version = "0.1.0"
authors = ["HaCk3D", "substance-of"]
license = "Apache-2.0"

[dependencies]
log = "*"
ncurses="*"
futures = "0.1"
futures-cpupool = "0.1"
tokio-core = "0.1"
curl = "0.4"
json = "0.11"
quick-error = "1.1"
RobotS = { git = "https://github.com/gamazeps/RobotS" }
#hyper = { git = "https://github.com/hyperium/hyper" }
